# solvability

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
solvability/: __main__.py  llm.py
solvability/cli/: __init__.py  cli.py  model.py  predict.py
solvability/data/: __init__.py  default-classifier.json
solvability/models/: __init__.py  classifier.py  config.py  document.py  featurizer.py  importance_strategy.py  report.py
tests/: __init__.py  conftest.py  test_classifier.py  test_data_loading.py  test_featurizer.py  test_serialization.py
