[project]
name = "solvability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "litellm>=1.72.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
]
