[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solvability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "litellm>=1.72.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
solvability = "solvability.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["solvability"]
include = [
    "solvability/data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806"]  # Allow uppercase variable names in functions (common in ML for X, Y)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20250602",
]
